<?xml version="1.0"?>
<package format="2">
    <name>grid_planner</name>
    <version>0.0.1</version>
    <description>Robot grid planner.</description>
    <maintainer email="vlkjan6@fel.cvut.cz">Jan Vlk</maintainer>
    <license>BSD</license>
    <!-- <url type="website">https://github.com/tpet/naex</url> -->
    <author email="tpetricek@gmail.com">Tomas Petricek</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>tf2_ros</depend>
    <depend>nav_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2_eigen</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>


    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
